# claude-tui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude-ui-mode.py  claude-ui-mode.sh  claudetui.py  install.sh  pyproject.toml  run-coverage.sh  sonar-project.properties  test_claude_ui_mode.py  uninstall.sh
.github/workflows/: release.yml
assets/: blog-cover.html  social-card.html
claude-code-commands/: README.md
claude-code-commands/tui/: context.md  context_report.py  cost.md  cost_report.py  lib.py  perf.md  session.md  session_report.py  test_lib.py
claude-code-hooks/: README.md
claude-code-monitor/: README.md  chart.py  lib.py  monitor.py  test_monitor.py
claude-code-session-manager/: README.md  session-manager.py
claude-code-session-stats/: README.md  session-stats.py
claude-code-sniffer/: README.md  sniffer.py  test_sniffer.py
claude-code-statusline/: README.md  statusline.py  test_statusline.py
claude-code-statusline/statusline_core/: __init__.py  api_clients.py  calculations.py  constants.py  debug.py  display_state.py  formatters.py  git_info.py  layout.py  output.py  render.py  settings.py  transcript.py
claude-code-statusline/widgets/: bars.py  hex.py  matrix.py  progress.py
claude_tui_components/: README.md  __init__.py  colors.py  lines.py  settings.py  test_components.py  utils.py  widgets.py
claude_tui_core/: README.md  __init__.py  formatting.py  models.py  network.py  settings.py  test_core.py
docs/: index.html
