[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-tui"
version = "0.1.0"
description = "A terminal user interface for Claude AI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "claude-tui contributors" },
]
keywords = ["claude", "anthropic", "tui", "terminal", "ai", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.25.0",
    "textual>=0.55.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
claude-tui = "claude_tui.__main__:main"

[project.urls]
Homepage = "https://github.com/slima4/claude-tui"
Repository = "https://github.com/slima4/claude-tui"
Issues = "https://github.com/slima4/claude-tui/issues"

[tool.hatch.build.targets.wheel]
packages = ["claude_tui"]

[tool.ruff]
line-length = 88  # prefer black-compatible line length over the upstream 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
